--- a/kis_trend_atr_trading/config/universe.yaml
+++ b/kis_trend_atr_trading/config/universe.yaml
@@ -16,7 +16,7 @@ universe:
   # ────────────────────────────────────────────────────────────────
   # 종목 선정 방식
   # ────────────────────────────────────────────────────────────────
-  selection_method: "fixed"
+  selection_method: "combined"
   
   # 최대 동시 거래 종목 수
   max_stocks: 5
