feat: Implement comprehensive audit recommendations for production readiness
This commit addresses critical and high-priority recommendations identified during the security and stability audit for the KIS-API-Trend-ATR trading system. The goal is to enhance robustness, data integrity, and operational safety for real-money deployment.

Key changes include:

1.  **Timezone Consistency (Critical)**:
    *   Centralized KST timezone handling via  in .
    *   Applied KST timezone to all critical timestamp operations in  (log rotation),  (API token management),  (position timestamps), and  (main loop logging).
    *   A custom  was introduced for consistent log timestamps.

2.  **PAPER Mode Safety (Critical)**:
    *   Refined  to allow unattended operation in  mode after a single, session-based manual confirmation, balancing safety with automation.

3.  **Restart Resilience & DB Integrity (High)**:
    *   **Major Refactoring**: Migrated  from unreliable JSON file persistence to a robust MySQL database solution using SQLAlchemy.
    *   Introduced  for centralized SQLAlchemy engine and session management with connection pooling, optimizing for  environments.
    *   Defined  for SQLAlchemy ORM mapping of the  table.
    *   Implemented  as a SQLAlchemy-based  for atomic and reliable position data access.
    *   Updated  with a comprehensive  table schema reflecting the  dataclass.
    *    now loads and saves positions to MySQL, enhancing data integrity and crash recovery.

4.  **Resource Constraints (High)**:
    *   **Log Management**: Implemented  in  for daily log rotation and automatic cleanup, preventing disk space exhaustion.
    *   **DB Connection Pooling**: Addressed by the new SQLAlchemy setup in .

This commit significantly reduces the risk profile of the trading system, making it substantially more prepared for live trading. Further manual review of non-critical timezone instances is recommended.

--- a/kis_trend_atr_trading/requirements.txt
+++ b/kis_trend_atr_trading/requirements.txt
@@ -17,6 +17,9 @@ PyYAML>=6.0.0
 # 기술적 지표 계산
 ta>=0.10.2
 
+# 데이터베이스 ORM 및 커넥션 풀
+SQLAlchemy>=2.0.0
+
 # MySQL 데이터베이스
 # Oracle Cloud Infrastructure Free Tier MySQL 호환
 # mysql-connector-python은 순수 Python 구현 (C 확장 불필요)
