--- a/kis_trend_atr_trading/config/universe.yaml
+++ b/kis_trend_atr_trading/config/universe.yaml
@@ -76,12 +76,12 @@ universe:
   # 종목코드만 입력합니다.
   # 최대 max_stocks 개수만큼 사용됩니다.
   #
-  stocks:
+stocks:
     - "005930"   # 삼성전자
-    # - "000660"   # SK하이닉스
-    # - "035720"   # 카카오
-    # - "035420"   # NAVER
-    # - "051910"   # LG화학
+    - "000660"   # SK하이닉스
+    - "035720"   # 카카오
+    - "035420"   # NAVER
+    - "051910"   # LG화학
 
 # ────────────────────────────────────────────────────────────────
 # 종목별 추가 설정 (선택적)
