--- a/kis_trend_atr_trading/config/universe.yaml
+++ b/kis_trend_atr_trading/config/universe.yaml
@@ -55,7 +55,7 @@ universe:
   # - market: 시장 스캔 모드 (combined를 시장 자동선정처럼 사용하려면 이 값을 사용)
   # - kospi200: KOSPI200 후보 풀
   # - volume_top: volume_top 결과를 ATR 후보로 사용
-  candidate_pool_mode: "yaml"
+  candidate_pool_mode: "market"
 
   # candidate_pool_mode=market에서 조회할 후보군 최대 스캔 수
   market_scan_size: 200
