docs: document daily universe refresh and holdings-first operations

--- a/kis_trend_atr_trading/config/universe.yaml
+++ b/kis_trend_atr_trading/config/universe.yaml
@@ -24,6 +24,12 @@ universe:
   
   # 최대 동시 거래 종목 수
   max_stocks: 5
+  # 오늘 유니버스 크기 (신규 진입 후보군 크기)
+  # 하위호환: 미설정 시 max_stocks 값을 사용
+  universe_size: 5
+  # 동시 보유 포지션 상한
+  # 하위호환: 미설정 시 max_stocks 값을 사용
+  max_positions: 5
   
   # ────────────────────────────────────────────────────────────────
   # 필터 조건 (volume_top, atr_filter, combined 방식 적용)
@@ -124,5 +130,5 @@ stock_overrides:
 # ────────────────────────────────────────────────────────────────
 # 메타정보
 # ────────────────────────────────────────────────────────────────
-updated_at: "2026-01-29"
-description: "기본 유니버스 설정 - 삼성전자 단일 종목"
+updated_at: "2026-02-12"
+description: "기본 유니버스 설정 - daily universe + holdings 관리"
