refactor: add market data provider interface and rest adapter integration

--- a/kis_trend_atr_trading/config/dev.yaml
+++ b/kis_trend_atr_trading/config/dev.yaml
@@ -113,3 +113,10 @@ logging:
 backtest:
   initial_capital: 10000000
   commission_rate: 0.00015
+
+# ────────────────────────────────────────────────────────────────
+# 시장데이터 피드 설정
+# ────────────────────────────────────────────────────────────────
+market_data:
+  data_feed: "rest"   # rest|ws (기본값은 기존 동작과 동일한 rest)
+  ws_timeframe: "1m"  # WS 사용 시 완료된 1분봉 이벤트 기준
