chore(env): complete env example and add migration helper

--- a/kis_trend_atr_trading/.env.example
+++ b/kis_trend_atr_trading/.env.example
@@ -1,145 +1,127 @@
-# ═══════════════════════════════════════════════════════════════════════════════
-# KIS Trend-ATR Trading System - 환경변수 설정 예시
-# ═══════════════════════════════════════════════════════════════════════════════
-#
-# ⚠️ 이 파일을 .env로 복사한 후 실제 값을 입력하세요.
-# ⚠️ .env 파일을 절대 Git에 커밋하지 마세요!
-# ⚠️ API Key, 비밀번호 등 민감 정보는 반드시 환경변수로만 관리하세요!
-#
-# 사용법:
+# ==============================================================================
+# KIS Trend-ATR Trading System - .env example (complete key set)
+# ==============================================================================
+# Usage:
 #   cp .env.example .env
-#   vi .env  # 실제 값 입력
+#   vi .env
 #
-# ═══════════════════════════════════════════════════════════════════════════════
+# WARNING:
+# - Never commit .env
+# - Keep API keys and passwords secret
+# ==============================================================================
 
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 1. 실행 모드 설정 (핵심!)
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# ★ 실행 모드 3단계:
-#   - DRY_RUN  : 가상 체결만, 주문 API 절대 호출 ❌ (기본값, 가장 안전)
-#   - PAPER    : 모의투자 API 사용 (가상 자금으로 실전 테스트)
-#   - REAL     : 실계좌 API 사용 (실제 돈 거래, 위험!)
-#
-# ★ 권장 사용 순서:
-#   1. DRY_RUN : 전략 논리 검증 (최소 2주)
-#   2. PAPER   : 모의투자 실전 테스트 (최소 1주)
-#   3. REAL    : 실계좌 운용
-#
+# ------------------------------------------------------------------------------
+# 1) Runtime mode
+# ------------------------------------------------------------------------------
+# EXECUTION_MODE: DRY_RUN | PAPER | REAL
 EXECUTION_MODE=DRY_RUN
 
+# TRADING_MODE: PAPER | REAL
+# Keep aligned with EXECUTION_MODE for clarity.
+TRADING_MODE=PAPER
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 2. 실계좌 이중 승인 설정 (REAL 모드 전용)
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# ★ REAL 모드 활성화 조건 (모두 충족 필요):
-#   1. EXECUTION_MODE=REAL
-#   2. ENABLE_REAL_TRADING=true (아래 설정)
-#   3. settings_real.py에서 REAL_TRADING_CONFIRMED=True
-#
-# ⚠️ 하나라도 미충족 시 DRY_RUN으로 자동 전환
-#
+# REAL mode guard
 ENABLE_REAL_TRADING=false
 
+# Optional safeguard used by legacy launcher for first live day
+REAL_TRADING_DAY1=true
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 3. Kill Switch (긴급 정지)
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# ★ true로 설정하면 모든 주문이 즉시 차단됩니다.
-# ★ 긴급 상황 발생 시 즉시 true로 변경하세요.
-# ★ 또는 텔레그램에서 /halt 명령 사용
-#
+
+# ------------------------------------------------------------------------------
+# 2) Safety
+# ------------------------------------------------------------------------------
+# Emergency halt switch (read by settings via env key KILL_SWITCH)
 KILL_SWITCH=false
 
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 4. 한국투자증권 API 인증 정보
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# 한국투자증권 Open API에서 발급받은 키를 입력하세요.
-# https://apiportal.koreainvestment.com/
-#
-# ⚠️ 실제 값을 입력하세요. 아래는 예시입니다.
-#
+# ------------------------------------------------------------------------------
+# 3) KIS API
+# ------------------------------------------------------------------------------
 KIS_APP_KEY=your_app_key_here
 KIS_APP_SECRET=your_app_secret_here
-
-
-# ────────────────────────────────────────────────────────────────────────────────
-# 5. 계좌 정보
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# 8자리 계좌번호와 계좌상품코드를 입력하세요.
-# 계좌상품코드는 보통 "01"입니다.
-#
 KIS_ACCOUNT_NO=12345678
 KIS_ACCOUNT_PRODUCT_CODE=01
 
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 6. 텔레그램 알림 설정
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# 텔레그램 봇으로 자동매매 알림을 받을 수 있습니다.
-#
-# [봇 생성 방법]
-# 1. 텔레그램에서 @BotFather 검색하여 대화 시작
-# 2. /newbot 명령어 입력
-# 3. 봇 이름 및 사용자명 입력
-# 4. 발급된 토큰 복사
-#
-# [Chat ID 확인 방법]
-# 1. 생성한 봇과 대화 시작 후 /start 전송
-# 2. 브라우저에서 https://api.telegram.org/bot<토큰>/getUpdates 접속
-# 3. 응답에서 "chat":{"id":XXXXXXXX} 확인
-#
-# ⚠️ 토큰은 절대 공개하지 마세요!
-#
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
-TELEGRAM_ENABLED=true
-
-
-# ────────────────────────────────────────────────────────────────────────────────
-# 7. 거래 설정
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# 기본 거래 종목 코드
+# ------------------------------------------------------------------------------
+# 4) Trading basics
+# ------------------------------------------------------------------------------
 DEFAULT_STOCK_CODE=005930
-
-# 1회 주문 수량 (보수적으로 시작 권장)
 ORDER_QUANTITY=1
+MAX_POSITIONS=1
 
-# 초기 자본금 (원)
 INITIAL_CAPITAL=10000000
-
-# 수수료율 (0.015% = 0.00015)
 COMMISSION_RATE=0.00015
 
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 8. 데이터베이스 설정
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# DB를 사용하면:
-#   - 서버 재시작 후에도 포지션 유지
-#   - 모든 거래 기록 영구 저장
-#   - 성과 분석 데이터 축적
-#
-# ★ DB 없이도 JSON 파일로 기본 동작 가능
-#
+# ------------------------------------------------------------------------------
+# 5) Runtime session/feed policy
+# ------------------------------------------------------------------------------
+MARKET_TIMEZONE=Asia/Seoul
+DATA_FEED_DEFAULT=rest
+RUNTIME_TIMEFRAME=1m
 
-# DB 연결 활성화 (true/false)
-# false로 설정하면 JSON 파일 방식으로 동작
+PREOPEN_WARMUP_MIN=10
+POSTCLOSE_MIN=10
+
+# Comma-separated HH:MM-HH:MM windows. Empty means disabled.
+AUCTION_GUARD_WINDOWS=
+ALLOW_EXIT_IN_AUCTION=true
+OFFSESSION_WS_ENABLED=false
+
+RUNTIME_STATUS_LOG_INTERVAL_SEC=300
+RUNTIME_STATUS_TELEGRAM=false
+RUNTIME_INSESSION_SLEEP_SEC=60
+RUNTIME_OFFSESSION_SLEEP_SEC=600
+
+
+# ------------------------------------------------------------------------------
+# 6) WS failover / recovery tuning
+# ------------------------------------------------------------------------------
+WS_START_GRACE_SEC=30
+WS_STALE_SEC=60
+WS_RECONNECT_MAX_ATTEMPTS=5
+WS_RECONNECT_BACKOFF_BASE_SEC=1
+WS_RECOVER_POLICY=auto
+WS_RECOVER_STABLE_SEC=30
+WS_RECOVER_REQUIRED_BARS=2
+WS_MIN_DEGRADED_SEC=120
+WS_MIN_NORMAL_SEC=120
+
+
+# ------------------------------------------------------------------------------
+# 7) Order sync / pending state maintenance
+# ------------------------------------------------------------------------------
+PENDING_EXIT_MAX_AGE_HOURS=72
+PENDING_ORDER_STALE_MINUTES=240
+PENDING_NO_ORDER_STALE_MINUTES=15
+INSTANCE_LOCK_STALE_TIMEOUT=3600
+
+
+# ------------------------------------------------------------------------------
+# 8) Token prewarm / refresh
+# ------------------------------------------------------------------------------
+TOKEN_RETRY_DELAY_SECONDS=61.0
+TOKEN_REFRESH_MARGIN_MINUTES=30
+TOKEN_PREWARM_HOUR=8
+TOKEN_PREWARM_MINUTE=0
+
+
+# ------------------------------------------------------------------------------
+# 9) Telegram
+# ------------------------------------------------------------------------------
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_chat_id_here
+TELEGRAM_ENABLED=true
+TELEGRAM_TRANSITION_COOLDOWN_SEC=600
+
+
+# ------------------------------------------------------------------------------
+# 10) Database
+# ------------------------------------------------------------------------------
 DB_ENABLED=false
-
-# 데이터베이스 유형 (postgres 또는 mysql)
 DB_TYPE=mysql
-
-# DB 연결 정보
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=kis_trading
@@ -147,67 +129,32 @@ DB_USER=root
 DB_PASSWORD=your_db_password_here
 
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 9. CBT (DRY_RUN) 모드 설정
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# DRY_RUN(CBT) 모드에서 사용되는 설정입니다.
-# 실계좌 주문 없이 가상 체결로 성과를 측정합니다.
-#
-
-# CBT 초기 자본금 (원)
-CBT_INITIAL_CAPITAL=10000000
-
-# CBT 데이터 저장 방식 (json 또는 sqlite)
+# ------------------------------------------------------------------------------
+# 11) DRY_RUN / report / logging paths
+# ------------------------------------------------------------------------------
 CBT_STORAGE_TYPE=json
-
-# CBT 가상 수수료율
-CBT_COMMISSION_RATE=0.00015
-
-# CBT 자동 리포트 활성화
-CBT_AUTO_REPORT_ENABLED=true
-
-# CBT Equity Curve 저장 간격 (분)
 CBT_EQUITY_SAVE_INTERVAL=60
 
+# Legacy optional keys kept for compatibility/docs
+CBT_INITIAL_CAPITAL=10000000
+CBT_COMMISSION_RATE=0.00015
+CBT_AUTO_REPORT_ENABLED=true
 
-# ────────────────────────────────────────────────────────────────────────────────
-# 10. 로깅 설정
-# ────────────────────────────────────────────────────────────────────────────────
-#
-# 로그 레벨: DEBUG, INFO, WARNING, ERROR, CRITICAL
+TRADE_DATA_TYPE=csv
+TRADE_DATA_PATH=data/trades.csv
+
+AUTO_TRADE_LOG_DIR=~/auto-trade/logs
 LOG_LEVEL=INFO
 
 
-# ═══════════════════════════════════════════════════════════════════════════════
-# 실행 방법 예시
-# ═══════════════════════════════════════════════════════════════════════════════
+# ------------------------------------------------------------------------------
+# Quick start examples
+# ------------------------------------------------------------------------------
+# DRY_RUN:
+#   EXECUTION_MODE=DRY_RUN TRADING_MODE=PAPER python -m kis_trend_atr_trading.main_multiday --mode trade
 #
-# ★ DRY_RUN 모드 (가장 안전, 기본값):
-#   EXECUTION_MODE=DRY_RUN python main_multiday.py --mode trade
-#   → 매매 신호만 생성, 가상 체결, 실제 주문 없음
+# PAPER:
+#   EXECUTION_MODE=PAPER TRADING_MODE=PAPER python -m kis_trend_atr_trading.main_multiday --mode trade
 #
-# ★ PAPER 모드 (모의투자):
-#   EXECUTION_MODE=PAPER python main_multiday.py --mode trade
-#   → 모의투자 API로 실제 주문 (가상 자금)
-#
-# ★ REAL 모드 (실계좌) - 매우 신중하게!:
-#   1. EXECUTION_MODE=REAL 설정
-#   2. ENABLE_REAL_TRADING=true 설정
-#   3. settings_real.py에서 REAL_TRADING_CONFIRMED=True 설정
-#   4. python main_multiday.py --mode trade
-#
-# ═══════════════════════════════════════════════════════════════════════════════
-
-
-# ═══════════════════════════════════════════════════════════════════════════════
-# 절대 하면 안 되는 것들
-# ═══════════════════════════════════════════════════════════════════════════════
-#
-# ❌ 이 파일(.env)을 Git에 커밋하지 마세요!
-# ❌ API Key를 코드에 직접 입력하지 마세요!
-# ❌ DRY_RUN/PAPER 단계를 건너뛰지 마세요!
-# ❌ 손실 한도를 과도하게 완화하지 마세요!
-# ❌ ENABLE_GAP_PROTECTION을 false로 설정하지 마세요!
-#
-# ═══════════════════════════════════════════════════════════════════════════════
+# REAL (only after validation):
+#   EXECUTION_MODE=REAL TRADING_MODE=REAL ENABLE_REAL_TRADING=true python -m kis_trend_atr_trading.main_multiday --mode trade
